Additional experience component and respective animation is complete. Now will need to fix unfilled whitespace

--- a/ash-website/src/app/quick-add-exp-info-card/quick-add-exp-info-card.component.css
+++ b/ash-website/src/app/quick-add-exp-info-card/quick-add-exp-info-card.component.css
@@ -2,6 +2,7 @@
     width: 100%;
     margin: 0 auto;
     display: block;
+    background-color: black;
 }
 .additionalExperiencesContainer {
     width: 100%;
@@ -20,11 +21,9 @@
 }
 
 .quickAddExpSummaryContainer {
-    background-color: black;
     position: relative;
-    margin: 0 25%;
-    margin-top: -300px;
-    width: 50%;
+    margin: 0 auto;
+    width: 100%;
     flex-wrap: wrap;
 }
 
@@ -33,22 +32,27 @@
     font-family: 'Poppins', sans-serif;
     font-size: 1.2em;
     text-align: center;
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+    padding: 20px 0px;
+}
+
+.readMoreContainer{
     width: 100%;
     display: block;
-    float: left;
-    text-shadow: 5px 1px 5px black;
-    background-color: rgba(0, 0, 0, 0.8);
-    padding: 5px;
+    margin: 0 auto;
 }
 
 .readMore {
     color: white;
     width: 100%;
     display: block;
-    float: left;
     text-align: center;
     font-family: 'Poppins', sans-serif;
-    text-shadow: 1px 1px 1px black;
+    border: 1px solid black;
+    text-shadow: 1px 0.5px 0.5px black;
+    background-color: black;
 }
 .readMore:hover { 
     cursor: pointer;
